--- a/libs/navigation/feature/src/lib/navigation-container/navigation-container.component.html
+++ b/libs/navigation/feature/src/lib/navigation-container/navigation-container.component.html
@@ -1,3 +1,3 @@
 <div class="navigation-container">
-    <atmn-shop-login-panel [user]="user$ | async"/>
+    <atmn-shop-login-panel-container/>
 </div>
