--- a/libs/navigation/ui/src/lib/login-panel/login-panel.component.html
+++ b/libs/navigation/ui/src/lib/login-panel/login-panel.component.html
@@ -1,9 +1,9 @@
 <div >
-  <button mat-raised-button color="primary" *ngIf="!user" (click)="login()">
+  <button mat-raised-button color="accent" *ngIf="!user" (click)="login()">
     <b>Sign In</b>
   </button>
   <div class="login-panel-container" *ngIf="user">
-    <span>{{ user.username }}</span>
+   <atmn-shop-user-info [user]="user"/>
     <img class="logout-icon" (click)="logout()" src="assets/icons/logout.svg" />
   </div>
 </div>
