--- a/libs/products/feature/src/lib/product-list-container/product-list-container.component.html
+++ b/libs/products/feature/src/lib/product-list-container/product-list-container.component.html
@@ -1,1 +1,5 @@
-<p>product-list-container works!</p>
+<div class="product-list-wrapper">
+    <ng-container *ngFor="let product of products$ | async ">
+        <atmn-shop-product-list-single-element [product]="product"/>
+    </ng-container> 
+</div>
