--- a/libs/products/ui/src/lib/product-list-single-element/product-list-single-element.component.html
+++ b/libs/products/ui/src/lib/product-list-single-element/product-list-single-element.component.html
@@ -1,13 +1,22 @@
-<div class="product-wrapper">
-    <div class="product-image">
-        <img [src]="product.thumbnail">
+<a [routerLink]="[product.id]">
+
+    <div class="product-wrapper">
+        <div class="product-image">
+            <img [src]="product.thumbnail">
     </div>
     <div class="product-info">
         <span class="product-info__info product-info__info--title">
-            {{product.title}}
-        </span> 
+             {{product.title}}
+            </span> 
         <span class="product-info__info product-info__info--description">
             {{product.description}}
         </span>
+        <span class="product-info__info product-info__info--title">
+            {{product.brand}}
+       </span> 
+    </div>
+    <div class="product-price">
+        {{product.price | currency}}
     </div>
 </div>
+</a>
