laod single product details

--- a/libs/products/feature/src/lib/product-details-container/product-details-container.component.html
+++ b/libs/products/feature/src/lib/product-details-container/product-details-container.component.html
@@ -1,2 +1,5 @@
-<p>product-details-container works!</p>
-<b>{{id}}</b>
+<div *ngIf="product$ | async as productDetails">
+    <h3>{{productDetails.title}}</h3>
+    <h3>{{productDetails.description}}</h3> 
+    <h3>{{productDetails.brand}}</h3> 
+</div>
