--- a/libs/products/feature/src/lib/product-details-container/product-details-container.component.html
+++ b/libs/products/feature/src/lib/product-details-container/product-details-container.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="product$ | async as productDetails">
-    <h3>{{productDetails.title}}</h3>
-    <h3>{{productDetails.description}}</h3> 
-    <h3>{{productDetails.brand}}</h3> 
+<div *ngIf="product$ | async as productDetails" class="product-details-wrapper">
+    <atmn-shop-product-details-gallery [images]="productDetails.images"/>
+    <atmn-shop-product-details-info/>
 </div>
