add track by fn

--- a/libs/products/feature/src/lib/product-list-container/product-list-container.component.html
+++ b/libs/products/feature/src/lib/product-list-container/product-list-container.component.html
@@ -1,5 +1,5 @@
 <div class="product-list-wrapper">
-    <ng-container *ngFor="let product of products$ | async ">
+    <ng-container *ngFor="let product of (products$ | async);trackBy: trackByFn">
         <atmn-shop-product-list-single-element [product]="product"/>
     </ng-container> 
 </div>
