fix detrails tyles

--- a/libs/products/feature/src/lib/product-details-container/product-details-container.component.scss
+++ b/libs/products/feature/src/lib/product-details-container/product-details-container.component.scss
@@ -5,20 +5,11 @@
     margin:3rem; 
     border: 1px solid $border-light-color;
     border-radius: 15px;
-    display:flex;
     max-width:1200px;
 
     margin: 3rem auto;
     &__wrapper {
-        display:flex;
-        flex-direction: row;
-    }
-
-    &__gallery {
-        flex: 1 1 600px;
-    }
-
-    &__info {
-       flex: 2 2 auto;
+        display:grid;
+        grid-template-columns: 600px 1fr;
     }
 } 
