--- a/libs/navigation/feature/src/lib/login-panel-container/login-panel-container.component.html
+++ b/libs/navigation/feature/src/lib/login-panel-container/login-panel-container.component.html
@@ -1,1 +1,1 @@
-<atmn-shop-login-panel [user]="user$ | async"/>
+<atmn-shop-login-panel [user]="user$ | async" (login)="onLogin($event)" (logout)="onLogout()"/>
