cart indiciator styles

--- a/libs/navigation/feature/src/lib/navigation-container/navigation-container.component.html
+++ b/libs/navigation/feature/src/lib/navigation-container/navigation-container.component.html
@@ -1,3 +1,8 @@
-<div class="navigation-container">
-    <atmn-shop-login-panel-container/>
+<div class="navigation">
+    <div class="navigation__cart">
+        <atmn-shop-cart-navigation-container/>
+    </div>
+    <div class="navigation__login">
+        <atmn-shop-login-panel-container/>
+    </div>
 </div>
