add cart component

--- a/libs/cart/ui/src/lib/cart-navigation/cart-navigation.component.html
+++ b/libs/cart/ui/src/lib/cart-navigation/cart-navigation.component.html
@@ -1,4 +1,4 @@
-<div class="cart-navigation">
+<div class="cart-navigation" (click)="onShowCartDetails()">
     <div class="cart-navigation__cart" matBadge="2" matBadgeColor="accent" matBadgePosition="below">
         <img class="cart-navigation__image" src="assets/icons/cart.svg">
     </div>
