--- a/libs/cart/feature/src/lib/cart-navigation-container/cart-navigation-container.component.html
+++ b/libs/cart/feature/src/lib/cart-navigation-container/cart-navigation-container.component.html
@@ -1,1 +1,1 @@
-<atmn-shop-cart-navigation (showCartDetails)="onShowCartDetails()"/>
+<atmn-shop-cart-navigation (showCartDetails)="onShowCartDetails()" [itemCount]="itemCount$ | async"/>
