--- a/libs/products/ui/src/lib/product-details-info/product-details-info.component.html
+++ b/libs/products/ui/src/lib/product-details-info/product-details-info.component.html
@@ -20,7 +20,7 @@
             ? 'Available' + ' (' + product.stock + ')'
             : 'Not available'
             }}</span>
-        <button class="info__action--buy-btn" mat-raised-button color="accent">
+        <button class="info__action--buy-btn" mat-raised-button color="accent" (click)="addToCart.emit(product)">
             Add to cart
         </button>
     </div>
